--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ python:
 # command to install dependencies
 install:
   - pip install requests
+  - pip install PrettyTable
 # command to run tests
 script:
+  - pytest --cov prettytable
   - python -m unittest project_03.py
