Updated Script in Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ install:
   - pip install PrettyTable
 # command to run tests
 script:
-  - python -m unittest project_03.py
-  - python -m unittest sprint2_test.py
+  - python project_03.py
+  - python sprint2_test.py
